--- a/templates/equipment/admin_dashboard.html
+++ b/templates/equipment/admin_dashboard.html
@@ -3,5 +3,5 @@
 {% block title %} Panel del administrador {% endblock %}
 
 {% block auth_content %}
-    <h1>Hola desde dashboard</h1>
+    <h1>Hola desde dashboard del admin</h1>
 {% endblock %}
