--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,7 @@ ARCHIVO: templates/base.html
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
-
-    
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
     {% block extra_css %}{% endblock %}
 </head>
@@ -30,98 +28,7 @@ ARCHIVO: templates/base.html
     </div>
 
 
-    {% if user.is_authenticated %}
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'equipment:user_dashboard' %}">
-                    <i class="fas fa-tools"></i> Sistema de Mantenimiento
-                </a>
-                
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-user"></i> {{ user.get_full_name }}
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'authentication:profile' %}">
-                                    <i class="fas fa-user-cog"></i> Mi Perfil
-                                </a></li>
-                                <li><a class="dropdown-item" href="{% url 'authentication:password_change' %}">
-                                    <i class="fas fa-key"></i> Cambiar Contraseña
-                                </a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li>
-                                    <form action="{% url 'authentication:logout' %}" method="post" class="d-inline">
-                                        {% csrf_token %}
-                                        <button type="submit" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</button>
-                                    </form>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        
-        <div class="container-fluid">
-            <div class="row">
-                <!-- Sidebar -->
-                <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse">
-                    <div class="position-sticky pt-3">
-                        <ul class="nav flex-column">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'equipment:user_dashboard' %}">
-                                    <i class="fas fa-tachometer-alt"></i> Dashboard
-                                </a>
-                            </li>
-                            
-                            {% if user.is_administrador %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'users:user_list' %}">
-                                        <i class="fas fa-users"></i> Usuarios
-                                    </a>
-                                </li>
-                            {% endif %}
-                            
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> <!-- Será equipment:list -->
-                                    <i class="fas fa-laptop"></i> Equipos
-                                </a>
-                            </li>
-                            
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> <!-- Será maintenance:list -->
-                                    <i class="fas fa-wrench"></i> Mantenimientos
-                                </a>
-                            </li>
-                            
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> <!-- Será reports:dashboard -->
-                                    <i class="fas fa-chart-bar"></i> Reportes
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-                
-                <!-- Main content -->
-                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                    <div class="pt-3">
-                        {% include 'partials/messages.html' %}
-                        {% block content %}{% endblock %}
-                    </div>
-                </main>
-            </div>
-        </div>
-    {% else %}
-        {% block auth_content %}{% endblock %}
-    {% endif %}
+    {% block auth_content %}{% endblock %}
     
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
