--- a/static/css/base.css
+++ b/static/css/base.css
@@ -96,3 +96,14 @@ body {
     border-radius: 20px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
 }
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+    display: none;
+}
+input[type="password"]::-webkit-credentials-auto-fill-button {
+    display: none !important;
+}
+input[type="password"]::-webkit-input-password-toggle-button {
+    display: none !important;
+}
