--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -36,11 +36,16 @@ ARCHIVO: templates/authentication/login.html
                             {% endif %}
                         </div>
                         
-                        <div class="mb-3">
+                        <div class="mb-3 position-relative">
                             <label for="{{ form.password.id_for_label }}" class="form-label">
                                 <i class="fas fa-lock"></i> {{ form.password.label }}
                             </label>
-                            {{ form.password }}
+                            <div class="input-group">
+                                {{ form.password }}
+                                <button type="button" class="btn btn-outline-secondary toggle-password" tabindex="-1" style="border-top-left-radius: 0; border-bottom-left-radius: 0;" onclick="togglePasswordVisibility('id_password', this)">
+                                    <i class="fas fa-eye"></i>
+                                </button>
+                            </div>
                             {% if form.password.errors %}
                                 <div class="text-danger small mt-1">
                                     {% for error in form.password.errors %}
@@ -84,4 +89,22 @@ ARCHIVO: templates/authentication/login.html
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script>
+function togglePasswordVisibility(inputId, btn) {
+    const input = document.getElementById(inputId);
+    const icon = btn.querySelector('i');
+    if (input.type === 'password') {
+        input.type = 'text';
+        icon.classList.remove('fa-eye');
+        icon.classList.add('fa-eye-slash');
+    } else {
+        input.type = 'password';
+        icon.classList.remove('fa-eye-slash');
+        icon.classList.add('fa-eye');
+    }
+}
+</script>
 {% endblock %}
