--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -113,11 +113,16 @@ ARCHIVO: templates/authentication/register.html
                         </div>
                         
                         <div class="row">
-                            <div class="col-md-6 mb-3">
+                            <div class="col-md-6 mb-3 position-relative">
                                 <label for="{{ form.password1.id_for_label }}" class="form-label">
                                     {{ form.password1.label }}
                                 </label>
-                                {{ form.password1 }}
+                                <div class="input-group">
+                                    {{ form.password1 }}
+                                    <button type="button" class="btn btn-outline-secondary toggle-password" tabindex="-1" style="border-top-left-radius: 0; border-bottom-left-radius: 0;" onclick="togglePasswordVisibility('id_password1', this)">
+                                        <i class="fas fa-eye"></i>
+                                    </button>
+                                </div>
                                 {% if form.password1.errors %}
                                     <div class="text-danger small mt-1">
                                         {{ form.password1.errors|first }}
@@ -125,11 +130,16 @@ ARCHIVO: templates/authentication/register.html
                                 {% endif %}
                             </div>
                             
-                            <div class="col-md-6 mb-3">
+                            <div class="col-md-6 mb-3 position-relative">
                                 <label for="{{ form.password2.id_for_label }}" class="form-label">
                                     {{ form.password2.label }}
                                 </label>
-                                {{ form.password2 }}
+                                <div class="input-group">
+                                    {{ form.password2 }}
+                                    <button type="button" class="btn btn-outline-secondary toggle-password" tabindex="-1" style="border-top-left-radius: 0; border-bottom-left-radius: 0;" onclick="togglePasswordVisibility('id_password2', this)">
+                                        <i class="fas fa-eye"></i>
+                                    </button>
+                                </div>
                                 {% if form.password2.errors %}
                                     <div class="text-danger small mt-1">
                                         {{ form.password2.errors|first }}
@@ -164,4 +174,22 @@ ARCHIVO: templates/authentication/register.html
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script>
+function togglePasswordVisibility(inputId, btn) {
+    const input = document.getElementById(inputId);
+    const icon = btn.querySelector('i');
+    if (input.type === 'password') {
+        input.type = 'text';
+        icon.classList.remove('fa-eye');
+        icon.classList.add('fa-eye-slash');
+    } else {
+        input.type = 'password';
+        icon.classList.remove('fa-eye-slash');
+        icon.classList.add('fa-eye');
+    }
+}
+</script>
 {% endblock %}
