--- a/templates/equipment/admin_equipment_list.html
+++ b/templates/equipment/admin_equipment_list.html
@@ -1,5 +1,35 @@
 {% extends 'equipment/dashboard.html' %}
 
 {% block content %}
-<!-- Aquí va el contenido específico de equipos admin -->
+<div class="container mt-4">
+    <h2 class="mb-4">Equipos registrados (Administrador)</h2>
+    <ul class="nav nav-tabs mb-3" id="tabEquipos" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="todos-tab" data-bs-toggle="tab" data-bs-target="#todos" type="button" role="tab">Todos</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="reparados-tab" data-bs-toggle="tab" data-bs-target="#reparados" type="button" role="tab">Reparados</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="mantenimiento-tab" data-bs-toggle="tab" data-bs-target="#mantenimiento" type="button" role="tab">En reparación</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="espera-tab" data-bs-toggle="tab" data-bs-target="#espera" type="button" role="tab">En espera</button>
+      </li>
+    </ul>
+    <div class="tab-content" id="tabEquiposContent">
+      <div class="tab-pane fade show active" id="todos" role="tabpanel">
+        {% include 'equipment/partials/equipos_tabla.html' with equipos=equipos %}
+      </div>
+      <div class="tab-pane fade" id="reparados" role="tabpanel">
+        {% include 'equipment/partials/equipos_tabla.html' with equipos=equipos_reparados %}
+      </div>
+      <div class="tab-pane fade" id="mantenimiento" role="tabpanel">
+        {% include 'equipment/partials/equipos_tabla.html' with equipos=equipos_mantenimiento %}
+      </div>
+      <div class="tab-pane fade" id="espera" role="tabpanel">
+        {% include 'equipment/partials/equipos_tabla.html' with equipos=equipos_espera %}
+      </div>
+    </div>
+</div>
 {% endblock %}
