--- a/templates/reports/admin_dashboard.html
+++ b/templates/reports/admin_dashboard.html
@@ -1,5 +1,29 @@
 {% extends 'equipment/dashboard.html' %}
 
 {% block content %}
-<!-- Aquí va el contenido específico de reportes admin -->
+<div class="container mt-4">
+    <h2 class="mb-4">Reportes del sistema</h2>
+    <ul class="nav nav-tabs mb-3" id="tabReportes" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="todos-tab" data-bs-toggle="tab" data-bs-target="#todos" type="button" role="tab">Todos</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pendientes-tab" data-bs-toggle="tab" data-bs-target="#pendientes" type="button" role="tab">Pendientes</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="resueltos-tab" data-bs-toggle="tab" data-bs-target="#resueltos" type="button" role="tab">Resueltos</button>
+      </li>
+    </ul>
+    <div class="tab-content" id="tabReportesContent">
+      <div class="tab-pane fade show active" id="todos" role="tabpanel">
+        {% include 'reports/partials/reportes_tabla.html' with reportes=reportes %}
+      </div>
+      <div class="tab-pane fade" id="pendientes" role="tabpanel">
+        {% include 'reports/partials/reportes_tabla.html' with reportes=reportes_pendientes %}
+      </div>
+      <div class="tab-pane fade" id="resueltos" role="tabpanel">
+        {% include 'reports/partials/reportes_tabla.html' with reportes=reportes_resueltos %}
+      </div>
+    </div>
+</div>
 {% endblock %}
