--- a/templates/errors/error.html
+++ b/templates/errors/error.html
@@ -18,7 +18,7 @@
                     </a>
                 {% endfor %}
             {% else %}
-                <a href="/" style="background-color: #4a90e2; color: white; padding: 12px 25px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Ir al Inicio</a>
+                <a href="/auth/login/" style="background-color: #4a90e2; color: white; padding: 12px 25px; text-decoration: none; border-radius: 5px; margin-right: 10px;">Ir al Login</a>
             {% endif %}
         </div>
         <div style="color: #7f8c8d; font-size: 14px;">
